--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Frontend Dev assignment",
-  "name": "Frontend Dev assignment for de Bijenkorf",
+  "short_name": "Frontend Dev",
+  "name": "Frontend Dev",
   "icons": [
     {
       "src": "favicon.ico",
